@@ -1,30 +1,30 @@
 /* GlueBox.java
  * =========================================================================
  * This file is originally part of the JMathTeX Library - http://jmathtex.sourceforge.net
- * 
+ *
  * Copyright (C) 2004-2007 Universiteit Gent
  * Copyright (C) 2009 DENIZET Calixte
- * 
+ *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
  * the Free Software Foundation; either version 2 of the License, or (at
  * your option) any later version.
- * 
+ *
  * This program is distributed in the hope that it will be useful, but
  * WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
  * General Public License for more details.
- * 
+ *
  * A copy of the GNU General Public License can be found in the file
  * LICENSE.txt provided with the source distribution of this program (see
  * the META-INF directory in the source jar). This license can also be
  * found on the GNU website at http://www.gnu.org/licenses/gpl.html.
- * 
+ *
  * If you did not receive a copy of the GNU General Public License along
  * with this program, contact the lead developer, or write to the Free
  * Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
  * 02110-1301, USA.
- * 
+ *
  */
 
 package org.scilab.forge.jlatexmath;
@@ -36,19 +36,19 @@ import java.awt.Graphics2D;
  */
 public class GlueBox extends Box {
 
-   protected float stretch = 0, shrink = 0;
+    protected float stretch = 0, shrink = 0;
 
-   public GlueBox(float space, float stretch, float shrink) {
-      this.width = space;
-      this.stretch = stretch;
-      this.shrink = shrink;
-   }
+    public GlueBox(float space, float stretch, float shrink) {
+        this.width = space;
+        this.stretch = stretch;
+        this.shrink = shrink;
+    }
 
-   public void draw(Graphics2D g2, float x, float y) {
-       // no visible effect
-   }
+    public void draw(Graphics2D g2, float x, float y) {
+        // no visible effect
+    }
 
-   public int getLastFontId() {
-      return TeXFont.NO_FONT;
-   }
+    public int getLastFontId() {
+        return TeXFont.NO_FONT;
+    }
 }
